# solar-s3

./: Cargo.toml  README.md
src/: lib.rs
src/bucket/: bucket.rs  bucket_db.rs  fs_metadata.rs  mod.rs  test.rs
src/bucket/sql/: create_tables.sql
src/storage/: mod.rs  space.rs  store.rs  test.rs
