[package]
name = "solar-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["fs"] }
async-recursion = { version = "1.0.0" }
sysinfo = "0.27.0"
xattr = "1.0.0"
mime_guess = "2.0.4"
byte-unit = "4.0.18"
chrono = "0.4.23"
regex = "1.7.0"
