[package]
name = "solar-s3"
version = "0.1.0"
edition = "2021"
description = "Solar-s3 this is the first version of the package that allows you to work with the file system as with S3 storage."
license = "MIT"

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
sysinfo = "0.27.0"
xattr = "1.0.0"
mime_guess = "2.0.4"
byte-unit = "4.0.18"
chrono = "0.4.23"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
mockall = "0.11.3"
async-trait = "0.1.60"
mocktopus = "0.8.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
